--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,19 +5,6 @@ on:
     branches:
       - main
       - master
-  pull_request:
-    branches:
-      - main
-      - master
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
@@ -38,30 +25,19 @@ jobs:
 
       - name: Build PreTeXt projects
         run: |
-          mkdir -p output
+          mkdir -p public
           for course in Math1431 Math1432 Math2231 Math2232 Math2233; do
             if [ -d "$course" ]; then
               cd $course
               pretext build web
               cd ..
-              mkdir -p output/$course
-              cp -r $course/output/web/* output/$course/
+              mkdir -p public/$course
+              cp -r $course/output/web/* public/$course/
             fi
           done
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'output'
-
-  deploy:
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
